--- a/src/css/results.css
+++ b/src/css/results.css
@@ -41,6 +41,10 @@
   );
 }
 
+body {
+  background-size: cover;
+}
+
 .nav a {
   text-decoration: none;
 }
@@ -198,4 +202,48 @@
 
 .liked {
   color: red;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .nav h1 {
+    font-size: 2rem;
+  }
+
+  body {
+   background-position: center center;
+   background-repeat: no-repeat;
+  }
+
+  .container-name, .container-gender, .container-overview {
+    margin-top: 1rem;
+    padding: 0;
+  }
+
+  .container-name h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .container-gender p{
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .container-overview p{
+    font-size: 1.3rem;
+    text-align: center;
+  }
+
+  .container-data-popularity {
+    margin-top: 7rem;
+    padding: 0;
+    gap: .5rem;
+    font-size: 1.5rem;
+  }
 }
