--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,3 +220,72 @@ body {
 .infoText span {
   font-size: .5rem;
 }
+
+@media (max-width: 768px) {
+  .nav {
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .nav h1 {
+    font-size: 2rem;
+  }
+
+  .main {
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .main section {
+    width: 90%;
+  }
+
+  #series, #movies, #favorites {
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    display: flex;
+    -webkit-overflow-scrolling: touch; /* Suaviza el scroll en móviles */
+    gap: 4rem; /* Espacio entre elementos */
+    height: 20rem;
+  }
+
+  .result-container {
+    flex-shrink: 0;
+    justify-content: center;
+    flex-direction: column;
+    height: 18rem;
+    width: 12rem;
+  }
+
+  .resultPosterContainer {
+    width: 100%;
+    height: 90%;
+  }
+
+  .resultPosterContainer img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .resultDataContainer {
+    width: 100%;
+    height: 20%;
+    display: block;
+    text-align: center;
+  }
+
+  .infoText {
+    height: 100%;
+    font-size: .8rem;
+  }
+
+  .infoText span {
+    display: none;
+  }
+
+  .interestContainer {
+    display: none;
+  }
+}
