--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,8 +1,14 @@
 @media (max-width: 768px) {
     #results {
+        width: 100%;
+        margin: auto;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         flex-wrap: wrap;
-        gap: 1rem;
+        gap: .5rem;
+    }
+
+    .result-container {
+        width: 10rem;
     }
 }
