--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,6 +221,36 @@ body {
   font-size: .5rem;
 }
 
+.footer {
+  width: 100%;
+  box-shadow: .5rem .5rem 1rem .1rem rgba(0, 0, 0, 0.5);
+  border-radius: .5rem;
+}
+
+.footer div {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.footer div h3 {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.footer div a {
+  text-decoration: none;
+}
+
+.footer div a i {
+  font-size: 2rem;
+  color: #fff;
+}
+
 @media (max-width: 768px) {
   .nav {
     width: 100%;
@@ -295,5 +325,14 @@ body {
 
   .interestContainer {
     display: none;
+  }
+
+  .footer div {
+    height: 3rem;
+  }
+
+  .footer div h3 {
+    font-size: 1rem;
+    text-align: center;
   }
 }
